--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -6023,7 +6023,7 @@ input.submit_input,
     border-radius: 3px;
     border: 1px solid #3eb060;
     background-color: #3eb060;
-    background-image: url(img/notification.svg);
+    background-image: url(../img/notification.svg);
     background-position: center;
     background-repeat: no-repeat;
     padding: 0 !important;
@@ -7118,12 +7118,12 @@ input.green_pill {
 }
 
 .two_cols_3_2 .right {
-    width: 52%;
+    width: 40%;
     padding: 10px 0 10px 10px;
 }
 
 .two_cols_3_2 .left {
-    width: 48%;
+    width: 60%;
     padding: 10px 10px 10px 0;
 }
 
@@ -7173,6 +7173,9 @@ input.green_pill {
     transition-property: box-shadow;
     transition-duration: .3s;
     transition-timing-function: ease;
+}
+.gallery_2 .img_box.hidden {
+    display: none;
 }
 
 .gallery_2 .img_box:hover {
@@ -7261,21 +7264,44 @@ input.green_pill {
     line-height: 24px;
 }
 
+thead tr, thead tr:hover{
+    z-index: 3;
+}
+
+th.table_cell.thm2 {
+    cursor:pointer;
+    text-align: center;
+}
+th.table_cell.thm2 h4,
+th.table_cell.thm2 .arrow{
+    width: 50%;
+    float:left;
+    text-align: center;
+}
+th.table_cell.thm2 .arrow{
+    font-weight: normal;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+}
+th.table_cell.thm2 .arrow .green{
+    color:green;
+}
+
 .table_5 {
     margin: 10px 0;
     border: 1px solid #E1E6EF;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-}
+    border-collapse: collapse;
+    width: 100%;
+    }
 
-.table_5 .table_row:nth-child(1) {
-    border-bottom: 1px solid #E1E6EF;
+.table_5 tbody .table_row:nth-child(1) {
+    border-top: 1px solid #E1E6EF;
 }
 
 .table_5 .table_row {
-    display: flex;
-    display: -webkit-flex;
     width: 100%;
     padding-left: 18px;
     cursor: pointer;
@@ -7301,66 +7327,66 @@ input.green_pill {
     transition-timing-function: ease;
 }
 
-.table_5 .table_row:hover {
+.table_5 .table_row:hover,
+.table_5 .table_row.hover{
     z-index: 2;
     -webkit-box-shadow: 0 1px 6px 0 rgba(0,0,0,.3);
     -moz-box-shadow: 0 1px 6px 0 rgba(0,0,0,.3);
     box-shadow: 0 1px 6px 0 rgba(0,0,0,.3);
 }
 
-.table_5 .table_row:nth-child(1):hover {
+.table_5 .table_row.head:hover {
     box-shadow: none;
     cursor: default;
+    z-index: 3;
 }
 
 .table_5 .table_row .table_cell {
-    display: inline-block;
     vertical-align: top;
-    padding: 12px 10px 7px 10px;
+    padding: 12px 0px 7px 5px;
     text-align: center;
 }
 
-.table_5 .table_row:nth-child(1) .table_cell {
+.table_5 thead .table_row .table_cell {
     padding: 17px 10px 18px 10px;
 }
 
+/*.table_5 .table_row .table_cell:nth-child(1) {
+    width: 10%;
+    padding-right: 1px;
+    text-align: right;
+}*/
+
 .table_5 .table_row .table_cell:nth-child(1) {
-    width: 25%;
-    min-width: 120px;
+    width: 20%;
+    text-align: center;
+    min-width: 55px;
 }
 
 .table_5 .table_row .table_cell:nth-child(2) {
     width: 10%;
-    min-width: 70px;
 }
 
 .table_5 .table_row .table_cell:nth-child(3) {
-    width: 10%;
-    min-width: 60px;
+    width: 20%;
+    min-width: 86px;
 }
 
 .table_5 .table_row .table_cell:nth-child(4) {
-    width: 15%;
-    min-width: 80px;
+    width: 10%;
 }
 
 .table_5 .table_row .table_cell:nth-child(5) {
-    width: 10%;
-    min-width: 60px;
+    width: 20%;
+    min-width: 86px;
 }
 
 .table_5 .table_row .table_cell:nth-child(6) {
-    width: 17%;
-    min-width: 90px;
-}
-
-.table_5 .table_row .table_cell:nth-child(7) {
-    width: 10%;
-    min-width: 70px;
+    /*width: 15%;*/
     white-space: nowrap;
 }
 
-.table_5 .table_row:nth-child(even) {
+.table_5 tbody .table_row:nth-child(odd) {
     background-color: #F8F8F8;
 }
 
@@ -7416,7 +7442,7 @@ input.green_pill {
 }
 
 .radio_2 input:checked + label:before {
-    background-image: url(img/checked_white.svg);
+    background-image: url(../img/checked_white.svg);
     background-position: center;
     background-repeat: no-repeat;
     border: 1px solid #3eb060;
@@ -7432,9 +7458,15 @@ input.green_pill {
     line-height: 17px;
 }
 
-.table_5 p {
+.table_5 p, .table_5 span {
     font-size: 13px;
     line-height: 17px;
+    font-weight: 400;
+}
+
+.table_5 th span.sel_val {
+    font-size: 14px;
+    font-weight: bold;
 }
 
 .checkbox_2 label {
@@ -7474,14 +7506,14 @@ input.green_pill {
     width: 15px;
     height: 15px;
     cursor: pointer;
-    background-image: url(img/star_black.svg);
+    background-image: url(../img/star_black.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
 }
 
 .star_checkbox input:checked + label {
-    background-image: url(img/star_yellow.svg);
+    background-image: url(../img/star_yellow.svg);
 }
 
 .photo_link {
@@ -7490,7 +7522,7 @@ input.green_pill {
     width: 14px;
     height: 15px;
     margin: 0 2px;
-    background-image: url(img/photo_camera.svg);
+    background-image: url(../img/photo_camera.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -7521,6 +7553,7 @@ input.green_pill {
     display: none;
 }
 
+/*
 .table_5_2 .table_row .table_cell:nth-child(1) {
     width: 10%;
     min-width: 70px;
@@ -7551,6 +7584,7 @@ input.green_pill {
     min-width: 70px;
     white-space: nowrap;
 }
+*/
 
 .table_6 {
     margin: 10px 0;
