--- a/backend/web/css/backend.css
+++ b/backend/web/css/backend.css
@@ -56,3 +56,26 @@ button.close {
 .user-index .grid-view img{
     max-width: 50px;
 }
+.author_photo {
+    width: 50px;
+    height: 50px;
+    background-color: #CDCECE;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    float:left;
+    margin: 2px;
+}
+
+.author_photo img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.user-menu a{
+    display: block;
+    height: 50px;
+}
